- rename event to aggregate event
