# api/controllers/CommitService.js
@@ -3,24 +3,24 @@
 var Promise = require('bluebird');
 var key = require('../config/redis.config').key;
 
-function assignId(commitAggregate, uniqueId) {
-    commitAggregate.aggregate.id = uniqueId;
-    var events = commitAggregate.eventItems;
-    for(var i = 0; i < events; i++){
-        events[i].aggregate.id = uniqueId
+function assignId(commitAgg, uniqueId) {
+    commitAgg.aggregate.id = uniqueId;
+    var aggEvts = commitAgg.aggregateEventItems;
+    for(var i = 0; i < aggEvts; i++){
+        aggEvts[i].aggregate.id = uniqueId
     }
 }
-function assignCommitItem(commitAggregate, aggregates, events) {
-    aggregates.push({aggregate: commitAggregate.aggregate});
-    for(var i = 0; i < commitAggregate.eventItems.length; i++){
-        events.push(commitAggregate.eventItems[i]);
+function assignCommitItem(commitAgg, aggs, aggEvts) {
+    aggs.push({aggregate: commitAgg.aggregate});
+    for(var i = 0; i < commitAgg.aggregateEventItems.length; i++){
+        aggEvts.push(commitAgg.aggregateEventItems[i]);
     }
 }
-function assignAllCommitItems(commitItems, aggregates, events, aggregateIds){
+function assignAllCommitItems(commitItems, aggs, aggEvts, aggIds){
     for(var a = 0; a < commitItems.length; a++){
         var commitItem = commitItems[a];
-        assignId(commitItem.commitAggregate, aggregateIds[a]);
-        assignCommitItem(commitItem.commitAggregate, aggregates, events);
+        assignId(commitItem.commitAggregate, aggIds[a]);
+        assignCommitItem(commitItem.commitAggregate, aggs, aggEvts);
     }
 }
 
@@ -32,20 +32,20 @@ var commitmentService = {
             pmCommitAggregate: function(data) {
 
                 var commitItems = data.commitAggregateBody.commitAggregateItems;
-                var eventItems = [];
-                var aggregateItems = [];
+                var aggEvts = [];
+                var aggs = [];
 
                 return _ds.id.pmMakeUniqueIds(key.aggregateIdKey, commitItems.length)
-                    .then(function(aggregateIds){
-                        assignAllCommitItems(commitItems, aggregateItems, eventItems, aggregateIds);
-                        return _ds.id.pmMakeUniqueIds(key.eventIdKey, eventItems.length);
+                    .then(function(aggIds){
+                        assignAllCommitItems(commitItems, aggs, aggEvts, aggIds);
+                        return _ds.id.pmMakeUniqueIds(key.aggregateEventIdKey, aggEvts.length);
                     }).then(function(eventIds){
-                        for(var e = 0; e < eventItems.length; e++){
-                            eventItems[e].event.id = eventIds[e];
+                        for(var e = 0; e < aggEvts.length; e++){
+                            aggEvts[e].aggregateEvent.id = eventIds[e];
                         }
                         return Promise.all([
-                            _ds.pmSetItems(key.aggregateItemsKey, aggregateItems ),
-                            _ds.pmSetItems(key.aggregateItemsKey, eventItems )
+                            _ds.pmSetItems(key.aggregateItemsKey, aggs ),
+                            _ds.pmSetItems(key.aggregateEventItemsKey, aggEvts )
                         ]);
                     }).then(function(){
                         return "Success";
